src/test/contracts/negative/not_comparable.mligo
let main ((_u, s) : (int set) set * unit) : operation list * unit = ([] : operation list), s

let main2 ((_u, s) : (int set) ticket * unit) : operation list * unit = ([] : operation list), s
